[package]
name = "tc-193"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-util = "0.3.28"
itertools = "0.10.5"
log = "0.4.17"
prost = "0.11.9"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tonic = "0.9.2"
url = "2.3.1"

[build-dependencies]
tonic-build = "0.9.2"
